[gd_scene load_steps=8 format=3 uid="uid://bvq8x2k3m4oar"]

[ext_resource type="Script" uid="uid://b4mb6qwb7otkp" path="res://algorithms/spacetopology/spacecolonization/MoldSporeVRDemo.gd" id="1_abc123"]
[ext_resource type="Script" uid="uid://boubun0f0ksni" path="res://algorithms/spacetopology/spacecolonization/MoldSporeVRDemoCamera.gd" id="2_camera"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.01, 0.02, 0.01, 1)
ambient_light_source = 2
ambient_light_color = Color(0.1, 0.3, 0.1, 1)
ambient_light_energy = 0.4
glow_enabled = true
glow_intensity = 0.7
glow_bloom = 0.3
glow_blend_mode = 0
fog_enabled = true
fog_light_color = Color(0.15, 0.25, 0.15, 1)
fog_sun_scatter = 0.2
fog_density = 0.03

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
transparency = 1
shading_mode = 0
albedo_color = Color(0.3, 0.6, 0.3, 0.4)

[sub_resource type="BoxMesh" id="BoxMesh_1"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1"]
emission_shape = 3
emission_box_extents = Vector3(0.6, 0.6, 0.6)
direction = Vector3(0, 0.2, 0)
initial_velocity_min = 0.05
initial_velocity_max = 0.15
gravity = Vector3(0, -0.1, 0)
scale_min = 0.005
scale_max = 0.02
color = Color(0.6, 0.9, 0.4, 0.3)

[sub_resource type="SphereMesh" id="SphereMesh_1"]
radius = 0.01
height = 0.02

[node name="MoldSporeVRDemo" type="Node3D"]
script = ExtResource("1_abc123")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 0, 0, 0)
light_color = Color(0.9, 1, 0.8, 1)
light_energy = 1.2
shadow_enabled = true
shadow_blur = 2.0

[node name="AccentLight1" type="SpotLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 1.8, 1.5, 0)
light_color = Color(0.3, 1, 0.4, 1)
light_energy = 3.5
spot_range = 4.0
spot_angle = 35.0

[node name="AccentLight2" type="SpotLight3D" parent="."]
transform = Transform3D(-0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, 0.5, -0.5, 0, 1.5, 1.8)
light_color = Color(1, 0.9, 0.3, 1)
light_energy = 3.5
spot_range = 4.0
spot_angle = 35.0

[node name="AccentLight3" type="SpotLight3D" parent="."]
transform = Transform3D(-0.707107, -0.5, -0.5, 0, 0.707107, -0.707107, 0.707107, 0.5, -0.5, -1.8, 1.5, 0)
light_color = Color(0.4, 0.7, 1, 1)
light_energy = 3.5
spot_range = 4.0
spot_angle = 35.0

[node name="AccentLight4" type="SpotLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, -0.5, 0, 0.707107, -0.707107, 0.707107, 0.5, 0.5, 0, 1.5, -1.8)
light_color = Color(0.9, 0.5, 1, 1)
light_energy = 3.5
spot_range = 4.0
spot_angle = 35.0

[node name="SpaceBoundary" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 0.5)
material_override = SubResource("StandardMaterial3D_1")
mesh = SubResource("BoxMesh_1")

[node name="AtmosphereParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 0.5)
amount = 100
lifetime = 10.0
process_material = SubResource("ParticleProcessMaterial_1")
draw_pass_1 = SubResource("SphereMesh_1")

[node name="AutoGrowthTimer" type="Timer" parent="."]
wait_time = 15.0

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 2, 1.5, 2)
script = ExtResource("2_camera")
